--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
   </head>
   <body>
     <div id="message">
-      <h1>Hoadt had been here before </h1>
+      <h1>Anh da di dc 1phan 3 cuoc doi</h1>
       <h2>Welcome</h2>
       <h1>Firebase Hosting Setup Complete</h1>
       <p>You're seeing this because you've successfully setup Firebase Hosting. Now it's time to go build something extraordinary!</p>
